# StrellerMinds-SmartContracts

./: clippy_test_errors.txt
contracts/certificate/: Cargo.toml
contracts/certificate/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/certificate/test_snapshots/test/: test_analytics_tracking.1.json  test_audit_trail.1.json  test_batch_issue_certificates.1.json  test_configure_multisig.1.json  test_configure_multisig_invalid_threshold.1.json  test_configure_multisig_timeout_too_short.1.json  test_create_and_use_template.1.json  test_double_initialize_fails.1.json  test_duplicate_approval_fails.1.json  test_full_multisig_workflow.1.json  test_get_pending_approvals.1.json  test_initialize.1.json  test_manual_execution.1.json  test_multisig_rejection.1.json  test_reissue_certificate.1.json  test_reissue_not_eligible_fails.1.json  test_revoke_certificate.1.json  test_share_certificate.1.json  test_share_revoked_cert_fails.1.json  test_student_certificates.1.json  test_template_missing_required_fields_fails.1.json  test_unauthorized_approver_fails.1.json  test_verify_authenticity.1.json  test_verify_certificate.1.json  test_verify_compliance.1.json  test_verify_revoked_cert_not_authentic.1.json
