[package]
name = "certificate"
version = "0.1.0"
edition = "2021"
description = "Advanced multi-signature certificate issuance system with hierarchical workflows, automated lifecycle management, batch operations, revocation/reissuance, analytics, compliance verification, and blockchain-anchored authenticity"
license = "Apache-2.0"
repository = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"
readme = "README.md"
homepage = "https://github.com/StarkMindsHQ/StrellerMinds-SmartContracts"
documentation = "https://docs.rs/certificate"
keywords = ["stellar", "blockchain", "education", "certificates", "soroban"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
